# stream-chat

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE.md  README.md  build.rs
.github/workflows/: publish.yml
proto/: chat.proto
src/: lib.rs
src/client/: config.rs  mod.rs  service.rs  state.rs  ui.rs
src/server/: config.rs  mod.rs  service.rs  state.rs
src/server/ingest/: mod.rs  twitch.rs  youtube.rs
