[package]
name = "stream-chat"
version = "0.1.3"
edition = "2024"
description = "A utility that makes it easier to read every message from chat. Works for YouTube, Twitch, or both."
license = "FSL-1.1-MIT"

[[bin]]
name = "stream-chat-server"
path = "src/bin/server.rs"

[[bin]]
name = "stream-chat-client"
path = "src/bin/client.rs"

[[bin]]
name = "stream-chat"
path = "src/bin/local.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
ratatui = "0.26"
crossterm = "0.27"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
protobuf-src = "1.1"
